--- a/Trackify/app/src/main/res/values/dimens.xml
+++ b/Trackify/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="screen_margin_horizontal">16dp</dimen>
     <dimen name="default_corner_radius">16dp</dimen>
     <dimen name="default_icon_size">48dp</dimen>
+    <dimen name="default_title_size">32dp</dimen>
 
     <!-- playlist -->
     <dimen name="playlist_cover_padding">75dp</dimen>
