Keyboard hidden when seaching and a progress bar has been added.

--- a/Trackify/app/src/main/res/layout/playlists_create_search_fragment.xml
+++ b/Trackify/app/src/main/res/layout/playlists_create_search_fragment.xml
@@ -44,14 +44,27 @@
                 android:textSize="@dimen/playlists_create_text_size" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <ProgressBar
+            android:id="@+id/searchProgressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvSearchedSongs"
+            Of="@+id/progressBar"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:paddingHorizontal="@dimen/playlists_create_search_layout_padding_horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+            app:layout_constraintVertical_bias="0.0"
             tools:itemCount="5"
             tools:listitem="@layout/playlists_track_add_item" />
     </androidx.constraintlayout.widget.ConstraintLayout>
