--- a/Trackify/app/src/main/res/layout-sw600dp-land/routes_landing_fragment.xml
+++ b/Trackify/app/src/main/res/layout-sw600dp-land/routes_landing_fragment.xml
@@ -18,39 +18,50 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_anchor="@+id/constraintLayout2"
+        app:layout_anchorGravity="center"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/mapView"
             android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="375dp"
+            android:layout_width="756dp"
+            android:layout_height="732dp"
             android:layout_weight="1"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/rvPlaylistRoutes"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="Available routes in your current location"
+            android:layout_marginStart="252dp"
+            android:layout_marginEnd="268dp"
+            android:layout_marginBottom="76dp"
+            android:text="Available routes in current location"
             android:textSize="@dimen/playlist_text_size_primary"
+            app:layout_constraintBottom_toTopOf="@+id/rvPlaylistRoutes"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mapView" />
+            app:layout_constraintHorizontal_bias="0.483"
+            app:layout_constraintStart_toEndOf="@+id/mapView"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvPlaylistRoutes"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="520dp"
+            android:layout_height="608dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9"
             tools:itemCount="8"
             tools:listitem="@layout/routes_playlists_item" />
     </androidx.constraintlayout.widget.ConstraintLayout>
