--- a/Trackify/app/src/main/res/layout/playlists_track_footer_item.xml
+++ b/Trackify/app/src/main/res/layout/playlists_track_footer_item.xml
@@ -15,7 +15,7 @@
         android:layout_height="2dp" />
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
