--- a/Trackify/app/src/main/res/navigation/playlists_navigation.xml
+++ b/Trackify/app/src/main/res/navigation/playlists_navigation.xml
@@ -49,6 +49,6 @@
         tools:layout="@layout/playlists_tracks_fragment">
         <argument
             android:name="playlist"
-            app:argType="com.apm.trackify.model.domain.PlaylistItem" />
+            app:argType="com.apm.trackify.provider.model.domain.PlaylistItem" />
     </fragment>
 </navigation>
