--- a/Trackify/app/src/main/res/layout/playlists_track_header_item.xml
+++ b/Trackify/app/src/main/res/layout/playlists_track_header_item.xml
@@ -43,6 +43,25 @@
         android:translationY="-15dp"
         app:layout_constraintTop_toBottomOf="@+id/cover">
 
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/Headline4"
+            tools:text="@tools:sample/lorem" />
+
+        <TextView
+            android:id="@+id/owner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:maxLines="1"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="12sp"
+            tools:text="@tools:sample/lorem" />
+
         <Button
             android:id="@+id/spotify"
             android:layout_width="match_parent"
@@ -55,31 +74,20 @@
             app:iconTint="@android:color/white" />
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:lineSpacingMultiplier="0.9"
-            android:textColor="?android:attr/textColorPrimary"
-            tools:text="@tools:sample/lorem" />
+            android:layout_gravity="bottom"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:text="@string/tracks_text"
+            android:textAppearance="@style/Headline6"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/owner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="?android:attr/textColorPrimary"
-                tools:text="@tools:sample/lorem" />
-
-            <Button
-                android:id="@+id/unfollow"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/unfollow_button" />
-        </LinearLayout>
+        <com.apm.trackify.util.widget.DottedDivider
+            android:layout_width="match_parent"
+            android:layout_height="2dp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
