--- a/Trackify/app/src/main/res/values/dimens.xml
+++ b/Trackify/app/src/main/res/values/dimens.xml
@@ -29,6 +29,9 @@
     <dimen name="playlists_create_layout_horizontal_padding">24dp</dimen>
     <dimen name="playlists_create_layout_vertical_padding">16dp</dimen>
     <dimen name="playlists_create_text_size">18sp</dimen>
+    <dimen name="playlists_create_divider">32dp</dimen>
+    <dimen name="playlists_create_duration_padding">24dp</dimen>
+    <dimen name="playlists_create_spinner_padding">32dp</dimen>
 
     <!-- playlists landing layout -->
     <dimen name="playlists_landing_layout_padding">16dp</dimen>
