--- a/Trackify/app/src/main/res/values/dimens.xml
+++ b/Trackify/app/src/main/res/values/dimens.xml
@@ -41,7 +41,7 @@
     <dimen name="playlists_landing_text_size_subtitle">14sp</dimen>
 
     <!-- users landing layout -->
-    <dimen name="user_username_title">20dp</dimen>
+    <dimen name="user_username_title">20sp</dimen>
     <dimen name="user_username_followers">12dp</dimen>
     <dimen name="user_mapview_height">200dp</dimen>
 </resources>
