--- a/Trackify/app/src/main/res/layout/playlists_create_header.xml
+++ b/Trackify/app/src/main/res/layout/playlists_create_header.xml
@@ -29,10 +29,13 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="@dimen/playlists_create_duration_padding"
         android:paddingVertical="@dimen/playlists_create_layout_vertical_padding"
+        android:layout_marginHorizontal="@dimen/playlists_create_layout_horizontal_padding"
         android:text="@string/form_duration"
         android:textColor="@android:color/white"
         android:textSize="@dimen/playlists_create_text_size"
         app:layout_constraintEnd_toStartOf="@+id/timeSpinner"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/playlistTitleField" />
 
@@ -40,10 +43,11 @@
         android:id="@+id/timeSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/playlists_create_spinner_padding"
         android:spinnerMode="dropdown"
         app:layout_constraintBottom_toBottomOf="@+id/playlistDurationText"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/playlistDurationText"
         app:layout_constraintTop_toTopOf="@+id/playlistDurationText" />
 
     <View
