--- a/Trackify/app/src/main/res/layout/user_following_fragment.xml
+++ b/Trackify/app/src/main/res/layout/user_following_fragment.xml
@@ -10,7 +10,7 @@
         style="@style/Widget.MaterialComponents.Button.Icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="@string/scan_qr"
         app:icon="@drawable/ic_camera"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
