--- a/Trackify/app/src/main/res/layout/user_shared_routes_fragment.xml
+++ b/Trackify/app/src/main/res/layout/user_shared_routes_fragment.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:paddingBottom="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.5"
         app:layout_constraintStart_toStartOf="parent"
