user profile tablet improvement

--- a/Trackify/app/src/main/res/layout-w600dp/user_shared_routes_fragment.xml
+++ b/Trackify/app/src/main/res/layout-w600dp/user_shared_routes_fragment.xml
@@ -8,24 +8,23 @@
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapViewFragment"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:paddingBottom="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintBottom_toBottomOf="@+id/rvSharedRouteItems"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.5" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvSharedRouteItems"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.5"
         tools:itemCount="10"
         tools:listitem="@layout/user_shared_route_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
