--- a/Trackify/app/src/main/res/layout-sw600dp/user_landing_fragment.xml
+++ b/Trackify/app/src/main/res/layout-sw600dp/user_landing_fragment.xml
@@ -71,9 +71,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_percent="0.5" />
 
-        <androidx.fragment.app.FragmentContainerView
+        <FrameLayout
             android:id="@+id/userSharedRoutesFragmentTablet"
-            android:name="com.apm.trackify.ui.user.landing.sharedRoutes.UserSharedRoutesFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -81,9 +80,8 @@
             app:layout_constraintTop_toBottomOf="@+id/tvUserSharedRoutes"
             app:layout_constraintWidth_percent="0.5" />
 
-        <androidx.fragment.app.FragmentContainerView
+        <FrameLayout
             android:id="@+id/userFollowingFragmentTablet"
-            android:name="com.apm.trackify.ui.user.landing.following.UserFollowingFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
