--- a/Trackify/app/src/main/res/layout-w600dp/routes_create_fragment.xml
+++ b/Trackify/app/src/main/res/layout-w600dp/routes_create_fragment.xml
@@ -56,72 +56,19 @@
         android:layout_height="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvUserPlaylistsInRoute"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:choiceMode="singleChoice"
-            android:padding="8dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/mapView"
-            app:layout_constraintTop_toBottomOf="@+id/playlist_to_share_title"
-            tools:itemCount="3"
-            tools:listitem="@layout/routes_create_playlist_item" />
-
-        <TextView
-            android:id="@+id/playlist_to_share_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="@string/playlist_to_share_title"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/mapView"
-            app:layout_constraintTop_toBottomOf="@+id/delete_button" />
-
-        <ImageButton
+        <Button
             android:id="@+id/delete_button"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:padding="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/route_name"
-            app:layout_constraintTop_toBottomOf="@+id/delete_text"
-            app:srcCompat="@drawable/ic_delete" />
-
-        <EditText
-            android:id="@+id/route_name"
+            style="@style/Widget.MaterialComponents.Button.Icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:autofillHints="@string/start_hint"
-            android:ems="8"
-            android:inputType="text"
-            android:labelFor="@id/route_name_title"
-            android:padding="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/delete_button"
-            app:layout_constraintStart_toEndOf="@+id/route_name_title"
-            app:layout_constraintTop_toTopOf="@+id/delete_text" />
-
-        <TextView
-            android:id="@+id/route_name_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="@string/route_name"
-            app:layout_constraintBottom_toBottomOf="@+id/route_name"
-            app:layout_constraintStart_toEndOf="@+id/mapView"
-            app:layout_constraintTop_toTopOf="@+id/route_name" />
-
-        <TextView
-            android:id="@+id/delete_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:backgroundTint="#77FFFFFF"
             android:text="@string/clear_markers"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/route_name"
+            android:textColor="@android:color/holo_red_light"
+            app:icon="@drawable/ic_delete_red_light"
+            app:iconTint="@android:color/holo_red_light"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.fragment.app.FragmentContainerView
@@ -134,6 +81,43 @@
             app:layout_constraintEnd_toStartOf="@+id/rvUserPlaylistsInRoute"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/route_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:autofillHints="@string/start_hint"
+            android:inputType="text"
+            android:labelFor="@id/route_name_title"
+            android:padding="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/route_name_title"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/route_name_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="@string/route_name"
+            app:layout_constraintBottom_toBottomOf="@+id/route_name"
+            app:layout_constraintStart_toEndOf="@+id/mapView"
+            app:layout_constraintTop_toTopOf="@+id/route_name" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvUserPlaylistsInRoute"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:choiceMode="singleChoice"
+            android:padding="8dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/mapView"
+            app:layout_constraintTop_toBottomOf="@+id/route_name"
+            tools:itemCount="3"
+            tools:listitem="@layout/routes_create_playlist_item" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
