maps bugfix try

--- a/Trackify/app/src/main/res/navigation/routes_navigation.xml
+++ b/Trackify/app/src/main/res/navigation/routes_navigation.xml
@@ -39,6 +39,13 @@
         <argument
             android:name="userId"
             app:argType="string" />
+        <action
+            android:id="@+id/action_user_following_profile_fragment_to_playlist_tracks_fragment"
+            app:destination="@id/playlist_tracks_fragment"
+            app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/fade_out" />
     </fragment>
 
     <fragment
