--- a/Trackify/app/src/main/res/navigation/routes_navigation.xml
+++ b/Trackify/app/src/main/res/navigation/routes_navigation.xml
@@ -39,9 +39,12 @@
         <argument
             android:name="userId"
             app:argType="string" />
+        <argument
+            android:name="location"
+            app:argType="string" />
         <action
-            android:id="@+id/action_user_following_profile_fragment_to_playlist_tracks_fragment"
-            app:destination="@id/playlist_tracks_fragment"
+            android:id="@+id/to_playlist_track_fragment"
+            app:destination="@+id/playlist_tracks_fragment"
             app:enterAnim="@anim/fade_in"
             app:exitAnim="@anim/fade_out"
             app:popEnterAnim="@anim/fade_in"
